[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerf_data_centers"
version = "0.1.0"
description = "Data Center Siting Tool - Identifies optimal locations for data centers based on various constraints and costs"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "CERF" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "tqdm>=4.65.0",
    "geopandas>=0.13.0",
    "pandas>=1.5.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "numpy>=1.20.0",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "networkx>=3.0.0",
]

[project.scripts]
cerf-siting = "cerf_data_centers.run_siting:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cerf_data_centers"]
